add profile view and major views

--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -12,6 +12,7 @@
 {% block container %}
     container-fluid
 {% endblock container %}
+{% block body-color %}{% endblock body-color %}
 {% block main %}
 
     <div class="row mx-5" style="min-height: 100vh" id="home">
