--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -17,7 +17,7 @@
         {% block head %}
         {% endblock head %}
     </head>
-    <body class="bg-light">
+    <body class="{% block body-color %}bg-light{% endblock body-color %}">
 
         {% block navbar %}
             <nav class="navbar sticky-top navbar-expand-lg navbar-light border-0 grad-dark">
