--- a/participant_profile/templates/participant_profile/primaseru.html
+++ b/participant_profile/templates/participant_profile/primaseru.html
@@ -21,6 +21,7 @@
      #v-pills-tab .nav-link.active{
          color: red;
          border-bottom: 2px solid red;
+         background: #fff;
      }
      .card-bg {
          background-color: #fff2f4;
@@ -80,14 +81,16 @@
     </div>
     <div class="row">
         <div class="col-12 px-2 px-lg-5 bg-light border-bottom border-top">
-            <div class="nav mx-0 mx-lg-5 px-0 px-lg-3" id="v-pills-tab" role="navigation">
+            <div class="nav nav-fill mx-0 mx-lg-5 px-0 px-lg-3" id="v-pills-tab" role="navigation">
                 <a class="nav-link tab-profile active" id="v-pills-identity-tab" data-toggle="pill" href="#v-pills-identity" role="tab" aria-controls="v-pills-identity" aria-selected="true">Identitas Diri</a>
                 <a class="nav-link tab-profile" id="v-pills-id-ayah-tab" data-toggle="pill" href="#v-pills-id-ayah" role="tab" aria-controls="v-pills-id-ayah" aria-selected="false">Identitas Ayah</a>
                 <a class="nav-link tab-profile" id="v-pills-id-ibu-tab" data-toggle="pill" href="#v-pills-id-ibu" role="tab" aria-controls="v-pills-id-ibu" aria-selected="false">Identitas Ibu</a>
                 <a class="nav-link tab-profile" id="v-pills-id-wali-tab" data-toggle="pill" href="#v-pills-id-wali" role="tab" aria-controls="v-pills-id-wali" aria-selected="false">Identitas Wali</a>
                 <a class="nav-link tab-profile" id="v-pills-major-tab" data-toggle="pill" href="#v-pills-major" role="tab" aria-controls="v-pills-major" aria-selected="false">Jurusan</a>
                 <a class="nav-link tab-profile" id="v-pills-files-tab" data-toggle="pill" href="#v-pills-files" role="tab" aria-controls="v-pills-files" aria-selected="false">Berkas</a>
-                <a class="nav-link tab-profile" id="v-pills-exam-tab" data-toggle="pill" href="#v-pills-exam" role="tab" aria-controls="v-pills-exam" aria-selected="false">Ujian</a>
+                <a class="nav-link tab-profile" id="v-pills-exam-tab" data-toggle="pill" href="#v-pills-exam" role="tab" aria-controls="v-pills-exam" aria-selected="false">Akun Ujian</a>
+                <a class="nav-link tab-profile" id="v-pills-exam-tab" data-toggle="pill" href="#v-pills-exam" role="tab" aria-controls="v-pills-exam" aria-selected="false">Pengumuman</a>
+                <a class="nav-link tab-profile" id="v-pills-exam-tab" data-toggle="pill" href="#v-pills-exam" role="tab" aria-controls="v-pills-exam" aria-selected="false">Pembayaran</a>
             </div>
         </div>
     </div>
@@ -132,7 +135,10 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="v-pills-files" role="tabpanel" aria-labelledby="v-pills-files-tab">
-                        <div class="row  rounded py-2 bg-white min-vh border mb-4" id="files-content">
+                        <div class="row shadow  rounded py-2 bg-white min-vh mb-4" id="files-content">
+                            <form method="POST" class="col-12 px-3 pt-3" action="{% url 'ajax-files' %}" id="berkas-form">
+
+                            </form>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="v-pills-exam" role="tabpanel" aria-labelledby="v-pills-exam-tab">
