implement multi-step form

--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -58,7 +58,7 @@
                                     </li>
                                 {% else %}
                                     <li class="nav-item mx-1">
-                                        <a class="btn btn-block btn-light btn-block" href="">Profile</a>
+                                        <a class="btn btn-block btn-light btn-block" href="{% url 'profile' %}">Profile</a>
                                     </li>
                                 {% endif %}
                             {% else %}
