--- a/participant_profile/templates/participant_profile/primaseru.html
+++ b/participant_profile/templates/participant_profile/primaseru.html
@@ -47,17 +47,18 @@
 {% block main %}
 
 
-    <div class="row py-2 pt-4">
+    <div class="row mx-1 mx-sm-4 my-0 my-sm-3 py-2 pt-4">
         <div class="col-sm-3 text-center mb-1">
-            <img src="{{ profile.image.url }}" alt="photo profile" width="175" height="175" />
+            <img src="{{ user.photoprofile.image.url }}" alt="photo profile" width="175" height="175" />
         </div>
         <div class="col-sm-9 mb-1">
-            <h1>{{ profile.student.full_name|title  }} </h1>
-            <h4 class="text-muted">{{ profile.student.email  }}</h4>
+            <h1>{{ profile.student.full_name|title  }} Lukman Hakim </h1>
+            <h6 class="text-muted">Asal Sekolah: {{ user.participant.registration_number  }}</h6>
+            <h6 class="text-muted">Nomor Peserta: {{ user.participant.registration_number  }}</h6>
             <form method="POST" enctype="multipart/form-data" id="photo-profile-form" name="photo-profile-form">
                 {% csrf_token %}
                 <div class="custom-file">
-                    <input type="file" accept="image/*" class="custom-file-input" value="{{ form_ph.image.value }}" id="{{ form_ph.image.auto_id }}" name="{{ form_ph.image.name }}">
+                    <input type="file" accept="image/*" class="custom-file-input" value="{{ form_ph.image.value }}" id="{{ form_ph.image.auto_id }}" name="image">
                     <label class="custom-file-label" for="{{ form_ph.image.auto_id }}">Upload Photo</label>
                 </div>
             </form>
@@ -71,7 +72,7 @@
                     Jangan bersedih hati, Anda belum diterima di SMK Telkom Bandung.
                 </div>
             {% endif %}
-            <a class="btn btn-outline-secondary btn-sm mt-3" href="">Logout</a>
+            <a class="btn btn-outline-secondary btn-sm mt-3" href="{% url 'logout' %}">Logout</a>
             <a class="btn btn-info btn-sm mt-3" href="">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-arrow-down-fill" viewBox="0 0 16 16">
                     <path d="M8 2a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 6.095 0 7.555 0 9.318 0 11.366 1.708 13 3.781 13h8.906C14.502 13 16 11.57 16 9.773c0-1.636-1.242-2.969-2.834-3.194C12.923 3.999 10.69 2 8 2zm2.354 6.854l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 9.293V5.5a.5.5 0 0 1 1 0v3.793l1.146-1.147a.5.5 0 0 1 .708.708z"/>
@@ -88,10 +89,10 @@
                 <a class="nav-link tab-profile" id="v-pills-id-ibu-tab" data-toggle="pill" href="#v-pills-id-ibu" role="tab" aria-controls="v-pills-id-ibu" aria-selected="false">Identitas Ibu</a>
                 <a class="nav-link tab-profile" id="v-pills-id-wali-tab" data-toggle="pill" href="#v-pills-id-wali" role="tab" aria-controls="v-pills-id-wali" aria-selected="false">Identitas Wali</a>
                 <a class="nav-link tab-profile" id="v-pills-major-tab" data-toggle="pill" href="#v-pills-major" role="tab" aria-controls="v-pills-major" aria-selected="false">Jurusan</a>
-                <a class="nav-link tab-profile" id="v-pills-files-tab" data-toggle="pill" href="#v-pills-files" role="tab" aria-controls="v-pills-files" aria-selected="false">Berkas</a>
                 <a class="nav-link tab-profile" id="v-pills-exam-tab" data-toggle="pill" href="#v-pills-exam" role="tab" aria-controls="v-pills-exam" aria-selected="false">Akun Ujian</a>
                 <a class="nav-link tab-profile" id="v-pills-graduation-tab" data-toggle="pill" href="#v-pills-graduation" role="tab" aria-controls="v-pills-graduation" aria-selected="false">Pengumuman</a>
                 {% if kelulusan %}
+                <a class="nav-link tab-profile" id="v-pills-files-tab" data-toggle="pill" href="#v-pills-files" role="tab" aria-controls="v-pills-files" aria-selected="false">Berkas</a>
                 <a class="nav-link tab-profile" id="v-pills-graduation-tab" data-toggle="pill" href="#v-graduation-exam" role="tab" aria-controls="v-pills-graduation" aria-selected="false">Pembayaran</a>
                 {% endif %}
             </div>
