--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -18,7 +18,7 @@
                     <span>Penerimaan Siswa Baru (PRIMASERU)</span>
                     <h1 class="font-weight-bold">Achieve Your Dream <span class="red-text">With Us</span></h1>
                     <p class="mb-5 mt-3">Sekolah Berbasis Teknologi Informasi dan Komunikasi Terbaik 3 di Jawa Barat Tahun 2019, UNBK Terbaik di Kabupaten Bandung Tahun 2016 dan 2019. Program Asrama, Patriot dan Tahfizh.</p>
-                    <a href="pendaftaran.html" class="my-btn-primary">Daftar Sekarang</a>
+                    <a href="{% url 'register' %}" class="my-btn-primary">Daftar Sekarang</a>
                 </div>
                 <div class="col-lg-6 col-md-10 mt-5 mt-lg-0">
                     <img class="w-100" src="{% static 'homepage/images/hero-img.jpg' %}" alt="hero image">
@@ -408,7 +408,7 @@
                         </div>
                         <div class="col-md-6 text-center py-5">
                             <p class="mb-4">Ada potongan Rp. 50.000,- jika menyebarkan informasi PRIMASERU SMK TELKOM BANDUNG ke 10 kontak WA/5 Grup WA atau Posting di Instagram dan Tag 5 Akun IG temannya</p>
-                            <a href="pendaftaran.html" class="my-btn-primary">Daftar Sekarang</a>
+                            <a href="{% url 'register' %}" class="my-btn-primary">Daftar Sekarang</a>
                         </div>
                     </div>
                 </div>
