--- a/participant_profile/templates/participant_profile/primaseru.html
+++ b/participant_profile/templates/participant_profile/primaseru.html
@@ -52,7 +52,7 @@
             <img src="{{ user.photoprofile.image.url }}" alt="photo profile" width="175" height="175" />
         </div>
         <div class="col-sm-9 mb-1">
-            <h1>{{ profile.student.full_name|title  }} Lukman Hakim </h1>
+            <h1>{{ user.participant.full_name|title  }} </h1>
             <h6 class="text-muted">Asal Sekolah: {{ user.participant.registration_number  }}</h6>
             <h6 class="text-muted">Nomor Peserta: {{ user.participant.registration_number  }}</h6>
             <form method="POST" enctype="multipart/form-data" id="photo-profile-form" name="photo-profile-form">
