--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -21,7 +21,7 @@
                     <a href="{% url 'register' %}" class="my-btn-primary">Daftar Sekarang</a>
                 </div>
                 <div class="col-lg-6 col-md-10 mt-5 mt-lg-0">
-                    <img class="w-100" src="{% static 'homepage/images/hero-img.jpg' %}" alt="hero image">
+                    <img loading="lazy" class="w-100" src="{% static 'homepage/images/hero-img.jpg' %}" alt="hero image">
                 </div>
             </div>
         </div>
@@ -40,17 +40,17 @@
                     <div class="row">
                         <div class="col-4">
                             <div class="box-jurusan">
-                                <img src="{% static 'homepage/images/logo-tjat.png' %}" alt="logo tja">
+                                <img loading="lazy" src="{% static 'homepage/images/logo-tjat.png' %}" alt="logo tja">
                             </div>
                         </div>
                         <div class="col-4">
                             <div class="box-jurusan">
-                                <img src="{% static 'homepage/images/logo-tkj.png' %}" alt="logo tkj">
+                                <img loading="lazy" src="{% static 'homepage/images/logo-tkj.png' %}" alt="logo tkj">
                             </div>
                         </div>
                         <div class="col-4">
                             <div class="box-jurusan">
-                                <img src="{% static 'homepage/images/logo-mm.png' %}" llt="logo mm">
+                                <img loading="lazy" src="{% static 'homepage/images/logo-mm.png' %}" llt="logo mm">
                             </div>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
 
             <div class="row align-items-center my-5 py-5 my-lg-4 py-lg-4 justify-content-center">
                 <div class="col-lg-6 col-md-10 order-lg-2 mb-3">
-                    <img src="{% static 'homepage/images/tjat.jpg' %}" class="w-100" alt="tjat">
+                    <img loading="lazy" src="{% static 'homepage/images/tjat.jpg' %}" class="w-100" alt="tjat">
                 </div>
                 <div class="col-lg-6 col-md-10 order-lg-1">
                     <article>
@@ -96,7 +96,7 @@
 
             <div class="row align-items-center my-5 py-5 my-lg-4 py-lg-4 my-lg- justify-content-center">
                 <div class="col-lg-6 col-md-10 mb-3">
-                    <img src="{% static 'homepage/images/tkj.jpg' %}" class="w-100" alt="tkj">
+                    <img loading="lazy" src="{% static 'homepage/images/tkj.jpg' %}" class="w-100" alt="tkj">
                 </div>
                 <div class="col-lg-6 col-md-10">
                     <article>
@@ -127,7 +127,7 @@
 
             <div class="row align-items-center my-5 py-5 my-lg-4 py-lg-4 my-lg- justify-content-center">
                 <div class="col-lg-6 col-md-10 order-lg-2 mb-3">
-                    <img src="{% static 'homepage/images/multimedia.jpg' %}" class="w-100" alt="mm">
+                    <img loading="lazy" src="{% static 'homepage/images/multimedia.jpg' %}" class="w-100" alt="mm">
                 </div>
                 <div class="col-lg-6 col-md-10 order-lg-1">
                     <article>
@@ -256,7 +256,7 @@
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-10 pl-lg-5 d-none d-lg-block">
-                    <img src="{% static 'homepage/images/berkas-section.jpg' %}" class="w-100" alt="gambar berkas">
+                    <img loading="lazy" src="{% static 'homepage/images/berkas-section.jpg' %}" class="w-100" alt="gambar berkas">
                 </div>
             </div>
 
@@ -266,7 +266,7 @@
                 </div>
             </div>
             <div class="row align-self-stretch justify-content-center position-relative">
-                <img src="{% static 'homepage/images/pattern-3.svg' %}" class="pattern-section-5" alt="">
+                <img loading="lazy" src="{% static 'homepage/images/pattern-3.svg' %}" class="pattern-section-5" alt="">
                 <div class="col-lg-6 col-md-10 mb-4 mb-lg-0 ">
                     <div class="card-berkas card-red-gradient">
                         <h2>Prestasi (Akademik)</h2>
@@ -302,7 +302,7 @@
             <div class="row ">
                 <div class="col-lg-8 col-md-12">
                     <div class="card-program my-4">
-                        <img src="{% static 'homepage/images/asrama.jpg' %}" class="mb-4 mb-md-0 order-md-2" alt="asrama">
+                        <img loading="lazy" src="{% static 'homepage/images/asrama.jpg' %}" class="mb-4 mb-md-0 order-md-2" alt="asrama">
                         <div class="pr-4">
                             <h3 class="font-weight-bold order-md-1">Asrama</h3>
                             <p>Buat kamu yang rumahnya jauh, SMK Telkom Bandung menyediakan asrama, dengan program yang menarik, membuat kamu betah buat tinggal.</p>
@@ -312,7 +312,7 @@
 
                 <div class="col-lg-8 col-md-12 ml-auto">
                     <div class="card-program my-4 right">
-                        <img src="{% static 'homepage/images/tahfidz.jpg' %}" class="mb-4 mb-md-0" alt="tahfidz">
+                        <img loading="lazy" src="{% static 'homepage/images/tahfidz.jpg' %}" class="mb-4 mb-md-0" alt="tahfidz">
                         <div class="pl-4">
                             <h3 class="font-weight-bold">Tahfidz</h3>
                             <p>Insyaallah, hafalan kamu pasti bertambah, dengan bersekolah di SMK Telkom Bandung. Soalnya kami mempunyai program tahfidz yang sayang buat dilewatkan.</p>
@@ -330,62 +330,42 @@
             <div class="row justify-content-center">
                 <div class="col-12">
                     <div class="card-red-gradient box-countdown text-center">
-                        <h1 class="font-weight-bold mb-5">Jalur prestasi & Reguler 1 <br> Sedang Dibuka sampai</h1>
+                        {% for s in schedule %}
+                            {% if s.is_ongoing %}
+                                <h1 class="font-weight-bold mb-5">{{ s }} <br> Sedang Dibuka sampai</h1>
+                                <script type="text/javascript">
+                                    var date = new Date(0).setUTCSeconds({{ s.end_date|date:'U' }});
+                                </script>
+                            {% endif %}
+                        {% endfor %}
                         <div class="countdown d-flex justify-content-center">
                             <div class="flex mx-3 mx-md-4 text-center">
-                                <h1 class="mb-1">17</h1>
+                                <h1 class="mb-1" id="day">17</h1>
                                 <span>HARI</span>
                             </div>
                             <div class="flex mx-3 mx-md-4 text-center">
-                                <h1 class="mb-1">08</h1>
+                                <h1 class="mb-1" id="hour">08</h1>
                                 <span>JAM</span>
                             </div>
                             <div class="flex mx-3 mx-md-4 text-center">
-                                <h1 class="mb-1">17</h1>
+                                <h1 class="mb-1" id="minute">17</h1>
                                 <span>MENIT</span>
                             </div>
                             <div class="flex mx-3 mx-md-4 text-center">
-                                <h1 class="mb-1">55</h1>
+                                <h1 class="mb-1" id="second">55</h1>
                                 <span>DETIK</span>
                             </div>
                         </div>
                         <!-- Jadwal pendaftaran -->
                         <div class="timeline-hr">
+                            {% for s in schedule %}
                             <div class="container-tl-hr">
-
                                 <div class="content">
-                                    <p>Jalur Prestasi</p>
-                                    <p>Aug - Dec 2021</p>
+                                    <p>{{ s  }}</p>
+                                    <p><b>{{ s.start_date|date:'d F' }} - {{ s.end_date|date:'d F Y'  }}</b></p>
                                 </div>
                             </div>
-                            <div class="container-tl-hr">
-
-                                <div class="content">
-                                    <p>Jalur reguler 1</p>
-                                    <p>Aug - Dec 2021</p>
-                                </div>
-                            </div>
-                            <div class="container-tl-hr">
-
-                                <div class="content">
-                                    <p>Jalur reguler 2</p>
-                                    <p>Jan - Mar 2021</p>
-                                </div>
-                            </div>
-                            <div class="container-tl-hr">
-
-                                <div class="content">
-                                    <p>Jalur reguler 3</p>
-                                    <p>Apr - Jun 2021</p>
-                                </div>
-                            </div>
-                            <div class="container-tl-hr">
-
-                                <div class="content">
-                                    <p>Jalur reguler 3+</p>
-                                    <p>Jul - Jul 2021</p>
-                                </div>
-                            </div>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
@@ -466,7 +446,7 @@
                     <iframe class="w-100" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.304805041355!2d107.62461351436788!3d-6.973320370218472!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e9abfaadb37f%3A0x7245c560108cfac8!2sSMK%20Telkom%20Bandung!5e0!3m2!1sid!2sid!4v1626538528846!5m2!1sid!2sid" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
                 <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 order-lg-1">
-                    <img src="{% static 'homepage/images/logo.png' %}" class="img-fluid mb-4" alt="logo smk telkom bandung">
+                    <img loading="lazy" src="{% static 'homepage/images/logo.png' %}" class="img-fluid mb-4" alt="logo smk telkom bandung">
                     <p>Guiding the Generation Supporting Enhancement of Nation's Competitiveness. Berdiri tahun 2013 dan sudah terakreditasi "A" dengan menghasilkan lulusan yang berkualitas sehingga langsung diserap oleh dunia industri.</p>
                 </div>
             </div>
