--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -33,19 +33,22 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto align-items-center">
-                            <li class="nav-item">
+                            <li class="nav-item mx-2">
                                 <a class="nav-link" href="#section-2">Jurusan</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item mx-2">
                                 <a class="nav-link" href="#section-4">Alur pendaftaran</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item mx-2">
                                 <a class="nav-link" href="#section-5">Berkas</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item mx-2">
                                 <a class="nav-link" href="#section-8">Biaya</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item mx-2">
+                                <a class="nav-link my-btn-outline-primary py-2 px-3 text-white" href="{% url 'login' %}">Login</a>
+                            </li>
+                            <li class="nav-item mx-2">
                                 <a class="nav-link my-btn-primary py-2 px-3 text-white" href="{% url 'register' %}">Daftar PPDB</a>
                             </li>
                         </ul>
