--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -24,6 +24,11 @@
     <div class="p-3">
         <form class="form-signin login-form  rounded p-5 mt-5 mt-sm-4 bg-white shadow" method="POST">
             {% csrf_token %}
+            <a href="/">
+                <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" fill="currentColor" class="bi bi-arrow-left-square" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm11.5 5.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+                </svg>
+            </a>
             <div class="text-center mb-4">
                 <img src="{% static 'users/images/Sekunder.png'  %}" alt="logo smk telkom bandung" width="125vh" />
                 <h1 class="h3 my-3 font-weight-normal judul">Login Primaseru</h1>
